--- a/BlazingTrails.Client/wwwroot/index.html
+++ b/BlazingTrails.Client/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet" />
     <link href="BlazingTrails.Client.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" crossorigin="" />
 </head>
 
 <body>
@@ -21,6 +22,7 @@
     <a class="dismiss">🗙</a>
 </div>
 <script src="_framework/blazor.webassembly.js"></script>
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" crossorigin=""></script>
 </body>
 
 </html>
